--- a/index.html
+++ b/index.html
@@ -3,124 +3,67 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Página do Lipão</title>
+  <title>Filipe Albieri</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="myles.ico">
+  <!-- Fontes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Source+Sans+Pro:wght@300&family=Yaldevi:wght@300&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="img\static-modified.png" alt="foto do manolo"></td>
-      <td>
-        <h1>Filipe Silveira Albieri</h1>
-        <p><em>Formado em Análise de sistemas pela <a href="http://www.fatecsp.br"> Faculdade de Tecnologia de São Paulo(FATEC-SP)</a></em></p>
-        <p>Programador full-stack em .NET<img src="img/dot-net.png" />(me esforçando para aprender Node.JS<img src="https://img.icons8.com/color/48/000000/nodejs.png" /> como back-end e Python<img
-            src="https://img.icons8.com/color/25/000000/python--v1.png" /> também) e Angular<img src="https://img.icons8.com/color/24/000000/angularjs.png" />(me esforçando para aprender React<img
-            src="https://img.icons8.com/office/30/000000/react.png" />)
-        </p>
-        <p>Fascinado por jogos, somelier de músicas, estudante para sempre e leitor nas horas vagas. Esse é o Cortez, também chamado de Soneca ou Cote por alguns.</p>
-      </td>
-    </tr>
 
-  </table>
+  <div class="top-container">
+    <img class="nuvem-de-cima" src="images/cloud.png" alt="cloud-img">
+    <h1>Saudações do Lipão</h1>
+    <h2><span class="programmer">um <span class="pro">pro</span>gramador</span></h2>
+    <img class="nuvem-embaixo" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
 
-
-
-
-
-  <hr>
-  <h3>Educação</h3>
-  <ul>
-    <li>Wise Up - Berrini</li>
-    <ul>
-      <li>Advanced I - Advanced II</li>
-      <li>Conversation I - Conversation IV</li>
-    </ul>
-    <br>
-    <li>Cursos Udemy</li>
-    <ul>
-      <br>
-      <li><strong>Concluídos</strong></li>
-      <li><a href="https://www.udemy.com/certificate/UC-b1cdc5ba-808a-40d4-bcdb-678797abb2e3/">Angular Essentials - Maximilian Schwarzmüller</a></li>
-      <li><a href="https://www.udemy.com/certificate/UC-da548915-aa59-4581-a301-cf998ab170c0/#">C# Completo Programação Orientada a Objetos - Nelio Alves</a></li>
-      <br>
-      <li><strong>Estudando...</strong></li>
-      <li>The Complete 2021 Web Development Bootcamp - Dra. Angela Yu <a href="https://www.udemy.com/share/1013gG3@b_ky4WnQjQDNwX689Yk5C7NJrbw11-xhsmBVB8IenqUW1u0FygG_V9b8tlIFCsyC/">(mais detalhes)</a></li>
-    </ul>
-  </ul>
-  <hr>
-  <h3>Experiência profissional</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Datas</th>
-        <th>Empresa(cliente)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>05/2017-05/2018</td>
-        <td>Sec4You</td>
-      </tr>
-      <tr>
-        <td>05/2019-10/2019</td>
-        <td>ResourceIT(Liberty Seguros)</td>
-      </tr>
-      <tr>
-        <td>11/2019-12/2019</td>
-        <td>ResourceIT(Itaú)</td>
-      </tr>
-      <tr>
-        <td>01/2020-04/2020</td>
-        <td>ResourceIT/Qintess(Itaú)</td>
-      </tr>
-      <tr>
-        <td>05/2020-Atual</td>
-        <td>Wipro(Itaú)</td>
-      </tr>
-    </tbody>
-
-  </table>
-  <hr>
-  <h3>Competências</h3>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="staticS" src="images/static-modified.png" alt="static-shock-img">
+      <h2>Olá.</h2>
+      <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>Minhas Skills.</h2>
+      <div class="skill-row">
+        <!-- Icon made by https://www.freepik.com" Freepik from https://www.flaticon.com/ -->
+        <img class="binary-code" src="images/binary-code.png" alt="binary-code-icon">
+        <h3>Codar</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <!-- Icon made by https://www.freepik.com" Freepik from https://www.flaticon.com/ -->
+        <img class="game-control" src="images/game-control.png" alt="game-control-icon">
+        <h3>Jogar video jogos</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Manda o papo!</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p class="contate-me">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a href="mailto:name@email.com" class="BUTTON_QKQ">Entre em contato</a>
+    </div>
+  </div>
 
 
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://filipealbieri.github.io/cv/">Website</a>
+    <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
+    <p class="copyright">© 2021 Filipe Albieri.</p>
+  </div>
 
-  <table cellspacing="10">
-    <tbody>
-
-      <tr>
-        <td>HTML</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        <td>SQL Server</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>CSS</td>
-        <td>⭐⭐⭐⭐</td>
-        <td>Python</td>
-        <td>⭐</td>
-      </tr>
-      <tr>
-        <td>Bootstrap</td>
-        <td>⭐⭐⭐⭐</td>
-        <td>.NET Core</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        <td>Angular</td>
-        <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>SASS</td>
-        <td>⭐</td>
-      </tr>
-
-    </tbody>
-  </table>
-  <a href="hobbies.html">Meus Hobbies</a>
-  <a href="contato.html">Contate-me</a>
 </body>
 
 </html>
